src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Opportunity Process Car</fullName>
        <description>Opportunity Process Car</description>
        <isActive>true</isActive>
        <values>
            <fullName>Application Taken</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Opportunity Process Click Life</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Application Taken</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won - Policy Active</fullName>
        </values>
        <values>
            <fullName>Quote</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Opportunity Process ClickLoans</fullName>
        <description>Opportunity Process Click loans</description>
        <isActive>true</isActive>
        <values>
            <fullName>Application Taken</fullName>
        </values>
        <values>
            <fullName>Appointed</fullName>
        </values>
        <values>
            <fullName>Approval</fullName>
        </values>
        <values>
            <fullName>CL Future Contact Date</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Loan Document</fullName>
        </values>
        <values>
            <fullName>Settled</fullName>
        </values>
        <values>
            <fullName>Settlement</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Opportunity Process Home</fullName>
        <description>Opportunity Process Home</description>
        <isActive>true</isActive>
        <values>
            <fullName>Application Taken</fullName>
        </values>
        <values>
            <fullName>Appointed</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won - Signed</fullName>
        </values>
        <values>
            <fullName>Confirmed Appointment</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Birthdate__c</fullName>
        <formula>Account.PersonContact.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Birthday__c</fullName>
        <formula>Account.PersonContact.Birthday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Do_Not_Call__c</fullName>
        <formula>Account.PersonContact.DoNotCall</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Do_Not_Email__c</fullName>
        <formula>Account.PersonContact.HasOptedOutOfEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Do Not Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <formula>Account.PersonContact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_First_Name__c</fullName>
        <formula>Account.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Last_Name__c</fullName>
        <formula>Account.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Mobile_Phone__c</fullName>
        <formula>Account.PersonContact.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone_Number__c</fullName>
        <formula>Account.PersonContact.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Title__c</fullName>
        <formula>Account.PersonContact.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_To_Call_File_Date__c</fullName>
        <label>Add To Call File Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Age_Next_Birthday__c</fullName>
        <formula>IF( DATE( YEAR(  Account_Birthday__c ) , MONTH( TODAY() ) , DAY( TODAY() ) ) &gt; Account_Birthday__c,  YEAR( TODAY())- YEAR(Account_Birthday__c) + 1  , YEAR( TODAY())- YEAR(Account_Birthday__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age Next Birthday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_Current_Loan__c</fullName>
        <label>Age of Current Loan</label>
        <picklist>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6+ Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annual_Fees__c</fullName>
        <label>Annual Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <formula>Account.Annual_Income__pc</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To edit this field, please go to account page</inlineHelpText>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_Liability_Statement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset &amp; Liability Statement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Asset_Liability_Statement__c.AL_Statement_Owner__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Asset_Liability_Statement__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_File_Is_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call File Is Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capacity_Met__c</fullName>
        <formula>IF( Capacity__c &gt; Proposed_Repayments__c,IMAGE(&quot;/servlet/servlet.FileDownload?file=015900000042xgl&quot;, &quot;Capacity Met&quot;),IMAGE(&quot;/servlet/servlet.FileDownload?file=015900000042xhU&quot;, &quot;Capacity Not Yet Met&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity Met?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <formula>Net_Income_All_Applicants__c -  Net_Expenses_All_Applicants__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Admin_Fee_Quote__c</fullName>
        <formula>Car_Admin_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Admin_Fee__c</fullName>
        <defaultValue>5.50</defaultValue>
        <label>Admin Fee (Monthly)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Advance_Arrears__c</fullName>
        <label>Advance/Arrears</label>
        <picklist>
            <picklistValues>
                <fullName>Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrears</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Applicant__c</fullName>
        <formula>Account.FirstName &amp; &quot; &quot; &amp;  Account.LastName</formula>
        <label>Applicant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Application_Fee__c</fullName>
        <defaultValue>450</defaultValue>
        <label>Application Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Asset_Cost__c</fullName>
        <label>Asset Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Balloon_Quote__c</fullName>
        <formula>Car_Balloon__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balloon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Balloon__c</fullName>
        <label>Balloon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Brokerage_Finance_or_Overs__c</fullName>
        <label>Brokerage Finance or % Overs</label>
        <picklist>
            <controllingField>Car_Lender__c</controllingField>
            <picklistValues>
                <fullName>Financed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage Overs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Brokerage__c</fullName>
        <label>Brokerage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Car_Goods_Use_Description__c</fullName>
        <label>Goods Use Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Car_Goods_Use__c</fullName>
        <label>Goods Use</label>
        <picklist>
            <picklistValues>
                <fullName>Boat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor Vehicle and Commercial</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Motorcycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Insurance_Commission__c</fullName>
        <label>Insurance Commission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Insurance_Financed__c</fullName>
        <label>Insurance Financed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Insurance_Provider__c</fullName>
        <label>Insurance Provider</label>
        <picklist>
            <picklistValues>
                <fullName>AWN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NWC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swann</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Interest_Rate_Cust__c</fullName>
        <label>Interest Rate (Cust)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Car_Lender__c</fullName>
        <label>Lender</label>
        <picklist>
            <picklistValues>
                <fullName>Esanda (ANZ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liberty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macquarie</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Less_Deposit__c</fullName>
        <label>Less Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Loan_Balance__c</fullName>
        <label>Car Loan Balance</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Loan_Value__c</fullName>
        <label>Loan Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Make__c</fullName>
        <label>Make</label>
        <picklist>
            <picklistValues>
                <fullName>Alfa Romeo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bugatti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caterham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citroen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daewoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daihatsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daimler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elfin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eunos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great Wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hummer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_New_Used_Demo__c</fullName>
        <label>New/Used/Demo</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used/Demo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Origination_Fee__c</fullName>
        <defaultValue>770</defaultValue>
        <label>Origination Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Payment_Frequency_Quote__c</fullName>
        <formula>TEXT( Car_Payment_Frequency__c )</formula>
        <label>Payment Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fortnightly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Chattel Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Loan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Security_Registration_Fee__c</fullName>
        <label>Security Registration Fee</label>
        <picklist>
            <controllingField>Car_Product__c</controllingField>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Source_of_Goods__c</fullName>
        <label>Source of Goods</label>
        <picklist>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Term__c</fullName>
        <label>Term</label>
        <picklist>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>72</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>84</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Transmission__c</fullName>
        <label>Transmission</label>
        <picklist>
            <picklistValues>
                <fullName>Automatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuously Variable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dual Clutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydrodynamic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydrostatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Automatic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Account.BillingCity</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickEstablishment_Fee__c</fullName>
        <label>Establishment Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ClickMonthly_Fees__c</fullName>
        <label>Monthly Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ClickMortgage_Risk_Fee__c</fullName>
        <label>Mortgage Risk Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ClickTitle_Protection_Fee__c</fullName>
        <label>Title Protection Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ClickTotal_Upfront_Fee__c</fullName>
        <label>Total Upfront Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <label>Closed Lost Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Not Enough Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Enough Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currently Unemployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Credit History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Couldn&apos;t Show Enough Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recently Refinanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Rate Break Fee Too High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn&apos;t Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed &lt;1yr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Returns/BAS Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Law Issue Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Issues Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t Want to Leave Current Lender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Proceeding Despite Best Efforts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Co_Applicant__c</fullName>
        <formula>Asset_Liability_Statement__r.A_L_Statement_Joint_With__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Co-Applicant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Balance__c</fullName>
        <label>Credit Card Balance</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Appointment_Date_TIme__c</fullName>
        <label>Current Appointment Date TIme</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Appointment_Status__c</fullName>
        <label>Current Appointment Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Appointment_Type__c</fullName>
        <label>Current Appointment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Assigned_Broker__c</fullName>
        <label>Current Assigned Broker</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Financials_Up_to_Date__c</fullName>
        <label>Current Financials Up to Date</label>
        <picklist>
            <picklistValues>
                <fullName>PAYG - Payslips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Complete to 2012/2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some - Up to 2011/2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Interest_Rate_Type__c</fullName>
        <label>Current Interest Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Variable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable / Fixed Split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Line of Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Interest_Rate__c</fullName>
        <label>Current Interest Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Lender__c</fullName>
        <label>Current Lender</label>
        <picklist>
            <controllingField>Transaction_Type__c</controllingField>
            <picklistValues>
                <fullName>Adelaide Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adelaide Bank Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advantedge Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anchorage Home Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assured Home Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aussie Home Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia First Mortgage Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Defence Credit Union</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian First Mortgage Pty Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Unity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank MECU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank of Melbourne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank of Queensland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank of Victoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank SA Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banksia Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankstown City Credit Union</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BankWest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BankWest Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bendigo Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beyond Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluebay Home Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluestone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMC Mortgage Corporation Pty Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circle Credit Union</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Loan_Type__c</fullName>
        <label>Current Loan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Owner Occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Loan_Value__c</fullName>
        <label>Current Loan Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>